fix About HSP section height on mobile

--- a/src/styles/components/_faq.scss
+++ b/src/styles/components/_faq.scss
@@ -33,7 +33,15 @@
 }
 
 .FAQ__text {
-  min-height: 25vh;
+  min-height: 60vh;
+
+  @media(min-width: 400px) {
+    min-height: 40vh;
+  }
+
+  @media(min-width: $desktop-breakpoint) {
+    min-height: 25vh;
+  }
 }
 
 .FAQ__link {
